--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 html,body{margin:0;padding:0}
 
-div#header{background:url(myfavoritepicture.png) top #000; background-repeat:no-repeat; width:100%; height: 10%}
+div#header{background:url(myfavoritepicture.png) top #000; background-repeat:no-repeat; width:100%; height: 200px}
