--- a/Styles/mainstyle.css
+++ b/Styles/mainstyle.css
@@ -13,7 +13,7 @@ h3{font-size: 20px;}
 a:link{color:#54845b}
 a:visited{color:#304733}
 
-.centraldivision{flex:1;padding-bottom: 1px;padding-top: 0px;padding-left: 20px;padding-right:20px;margin:0%;
+.centraldivision{flex:1;padding-bottom: 1px;padding-top: 0px;padding-left: 20px;padding-right:20px;margin:0%;min-width: 80%;
     img{max-width: 80%;}
 }
 
