--- a/Styles/mainstyle.css
+++ b/Styles/mainstyle.css
@@ -5,8 +5,8 @@ body{font-family: Arial, Helvetica, sans-serif;color:#000000;background:#ffffff;
 
 section{display: flex;}
 article{flex: 1}
-nav{margin:0%; flex: 1; padding-top: 7px; padding-left: 20px; padding-right: 20px;padding-bottom: 10px;max-width: 150px; border-right-style: solid; border-width: 2px; border-right-color: #001019;list-style-type: none;}
-
+nav{margin:0%; flex: 1; padding-top: 7px; padding-left: 20px; padding-right: 20px;padding-bottom: 10px;max-width: 100px; border-right-style: solid; border-width: 2px; border-right-color: #001019;list-style-type: none;}
+li{font-size: 12px;}
 h2{font-size: 28px;}
 h3{font-size: 20px;}
 
