--- a/Styles/mainstyle.css
+++ b/Styles/mainstyle.css
@@ -5,7 +5,7 @@ body{font-family: Arial, Helvetica, sans-serif;color:#000000;background:#ffffff;
 
 section{display: flex;}
 article{flex: 1}
-nav{margin:0%; flex: 1; padding-top: 7px; padding-left: 20px; padding-right: 20px;padding-bottom: 10px;max-width: 100px; border-right-style: solid; border-width: 2px; border-right-color: #001019;list-style-type: none;}
+nav{margin:0%; flex: 1; padding-top: 7px; padding-left: 20px; padding-right: 20px;padding-bottom: 10px; max-width: 100px; border-right-style: solid; border-width: 2px; border-right-color: #001019;list-style-type: none;}
 li{font-size: 12px;}
 h2{font-size: 28px;}
 h3{font-size: 20px;}
@@ -13,7 +13,7 @@ h3{font-size: 20px;}
 a:link{color:#54845b}
 a:visited{color:#304733}
 
-.centraldivision{flex:1;padding-bottom: 1px;padding-top: 0px;padding-left: 20px;padding-right:20px;margin:0%;min-width: 80%;
+.centraldivision{flex:1;padding-bottom: 1px;padding-top: 0px;padding-left: 20px;padding-right:20px;margin:0%;
     img{max-width: 80%;}
 }
 
