--- a/Styles/mainstyle.css
+++ b/Styles/mainstyle.css
@@ -1,5 +1,5 @@
 
-header{background-color: #001019; color:#ffffff;font-size: 28; padding-left: 20px; padding-top: 5px; padding-bottom: 5px;}
+header{background-color: #001019; color:#ffffff; padding-left: 20px; padding-top: 5px; padding-bottom: 5px;}
 
 body{font-family: Arial, Helvetica, sans-serif;color:#000000;background:#ffffff;margin:0%;}
 
